# color-table

./: .gitignore  Cargo.toml  README.md
examples/: read.rs
src/: color_table.rs  generation_map.rs  generations.rs  lib.rs
src/color_table/: generation.rs  generation_map.rs
tests/: serialize.rs  table.rs
