[package]
name = "color-table"
version = "0.4.0"
readme = "README.md"
repository = "https://github.com/ibsamsky/color-table"
categories = ["data-structures"]
edition = "2024"
authors = ["Santiago Vira", "Isaac Samsky <github+ibsamsky@cark.moe>"]
license = "MIT"
rust-version = "1.87.0"

[dependencies]
bincode = "2.0.1"
bitfrob = { version= "1.3.2", optional = true }
bytemuck = { version = "1.24.0", features = ["align_offset", "derive", "min_const_generics", "must_cast", "track_caller"] }
cfg-if = "1.0.4"
memmap2 = "0.9.9"
pack1 = { version = "1.0.0", features = ["bytemuck"] }
parking_lot = "0.12.5"
rangemap = { version = "1.7.0", features = ["const_fn"] } # https://github.com/ripytide/nodit#similar-crates
roaring = { version = "0.11.2", optional = true }
thiserror = "2.0.17"
typed-builder = "0.23.2"
typesize = { version = "0.1.14", features = ["parking_lot"], optional = true }

[dev-dependencies]
bstr = "1.12.1"
fastrand = "2.3.0"
tempfile = "3.23.0"

[features]
default = []
# enable nightly features (currently unused)
nightly = []
# enable conversion of color classes to bitmaps using roaring
roaring = ["dep:roaring", "dep:bitfrob"]
# enable typesize support
typesize = ["dep:typesize"]
unstable_docs = []
